# pbcmd

./: README.rst  pyproject.toml  setup.cfg
src/pbcmd/: cli.py  cpush.py  csv2tex.py
